Lack of feeling needed connections

--- a/content/Lack of feeling needed.html
+++ b/content/Lack of feeling needed.html
@@ -3,9 +3,34 @@
 <p>You are needed. At the very least, if you disagree, you are needed in the sense that you are a part of the world and with the changing of the world there will be a change of you. What you do with and about this change is up to you. Modernity has, however, created the predicament that <strong>few, if any, feel needed</strong>. Maybe there is, at the very ground of Maslow's hierarchy of needs, the need to feel needed.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Nothing is local.html">Nothing is local</a></strong></li>
-	<li>  <strong><a href="Mental health.html">Mental health</a></strong></li>
-	<li>  <strong><a href="Suicide.html">Suicide</a></strong></li>
+	<li><a href="Apathy.html">Apathy</a> - If you have difficulty feeling like you're a necessary part of the world, you won't care.</li>
+	<li><a href="Bullshit jobs.html">Bullshit jobs</a> - If you aren't needed you might just as well waste your life on menial crap. It doesn't matter, does it?</li>
+	<li><a href="Carelessness.html">Carelessness</a></li>
+	<li><a href="Complexity mismatch.html">Complexity mismatch</a> - Imagine the arising complexity of actions if everyone suddenly realised they could contribute to the good?</li>
+	<li><a href="Democracy failing.html">Democracy failing</a> - When they need you, they'll call you.</li>
+	<li><a href="Despair.html">Despair</a></li>
+	<li><a href="Directionlessness.html">Directionlessness</a> - Nothing makes the direction of required action more clear than being and feeling needed.</li>
+	<li><a href="Distractions.html">Distractions</a> - Distracted from our perceived emptiness and purposelessness.</li>
+	<li><a href="Emotional crisis.html">Emotional crisis</a></li>
+	<li><a href="Failure to take responsibility.html">Failure to take responsibility</a> - Most arguments against taking responsibility seems to be that we somehow can't? Or shouldn't? Or that it won't matter? Weak lives.</li>
+	<li><a href="Hedonism.html">Hedonism</a> - Nothing remains but meaningless pleasure-seeking.</li>
+	<li><a href="Identity.html">Identity</a> - If you aren't anything to anyone else, who are you?</li>
+	<li><a href="Ignorance of interconnectedness.html">Ignorance of interconnectedness</a> - Whatever you do will have some effect.</li>
+	<li><a href="Ignoring diversity.html">Ignoring diversity</a> - Whatever you do, whatever *you* do might be what's missing.</li>
+	<li><a href="Individualism.html">Individualism</a></li>
+	<li><a href="Lack of belonging.html">Lack of belonging</a></li>
+	<li><a href="Lack of purpose.html">Lack of purpose</a></li>
+	<li><a href="Loneliness.html">Loneliness</a></li>
+	<li><a href="Loss of cultural complexity.html">Loss of cultural complexity</a> - Imagine the creativity of solutions and interventions if people felt truly needed for the challenges of modernity.</li>
+	<li><a href="Meaning crisis.html">Meaning crisis</a> - What greater meaning than being wanted and needed?</li>
+	<li><a href="Mental health.html">Mental health</a> - In the mist of my teenage depressive amnesia I can still vividly remember helping my grandfather removing snow from his log cabin up north.</li>
+	<li><a href="Selfishness.html">Selfishness</a> - At least I need me...</li>
+	<li><a href="Sex and sexuality.html">Sex and sexuality</a></li>
+	<li><a href="Sexism.html">Sexism</a> - Women and men seem to have no clue.</li>
+	<li><a href="The death of creative work.html">The death of creative work</a> - Especially now that AI-models can generate whatever commercial crap we consume.</li>
+	<li><a href="Unemployment.html">Unemployment</a> - Sadly, the peak of feeling needed often comes in the form of employment. I'm sorry if that's all you feel.</li>
+	<li><a href="Unpaid important labour.html">Unpaid important labour</a> - Perhaps needed but unrewarded and not prioritised?</li>
+	<li><a href="Violence.html">Violence</a> - Give every self-identifying incel three goats and a plot of land.</li>
 </ul>
 <br>
 <br>
