More lack connections

--- a/content/Lack of historical insight.html
+++ b/content/Lack of historical insight.html
@@ -3,9 +3,34 @@
 <p><strong>Disregard history and you will slowly erase your own future</strong>. History matters greatly. History contains other ways of being, living, thinking, acting, talking, seeing, and perceiving. It provides the richness needed for the emergence of cultures and, further, the cultivation of people. However, it is equally important to learn how to think about history. <a href="https://www.historians.org/research-and-publications/perspectives-on-history/january-2007/what-does-it-mean-to-think-historically">One model of historical thinking</a> provides five key concepts: change over time, causality, context, complexity, and contingency. Things change in ways we might not understand, even with hindsight, causality chains are seldom linear or simple, everything must be understood in the context of its place and time, everything is always endlessly complex, contingent events, or black swans, are improbable and inevitable at the same time.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="No respect for indigenous wisdom.html">No respect for indigenous wisdom</a></strong></li>
-	<li>  <strong><a href="Nuclear war.html">Nuclear war</a></strong></li>
-	<li>  <strong><a href="War.html">War</a></strong></li>
+	<li><a href="Biased evidence selection.html">Biased evidence selection</a></li>
+	<li><a href="Business-as-usual narrative.html">Business-as-usual narrative</a> - Few aspects of our present are usual.</li>
+	<li><a href="Delusional domination of nature.html">Delusional domination of nature</a> - What do you see when you picture Iceland? Before the viking settlers arrived about a fourth of its surface was covered in trees.</li>
+	<li><a href="Directionlessness.html">Directionlessness</a> - A vector without an origin.</li>
+	<li><a href="Dispositionism.html">Dispositionism</a></li>
+	<li><a href="Educational crisis.html">Educational crisis</a></li>
+	<li><a href="End of history.html">End of history</a> - The story of man's ascent is ending.</li>
+	<li><a href="Hemispherical asymmetry (Earth).html">Hemispherical asymmetry (Earth)</a></li>
+	<li><a href="Hobbesian views.html">Hobbesian views</a></li>
+	<li><a href="Ignorance of the mythical.html">Ignorance of the mythical</a> - What is history and what is myth? Does it matter? At what point does the distinction lose its difference?</li>
+	<li><a href="Ignoring complexity.html">Ignoring complexity</a></li>
+	<li><a href="Ignoring diversity.html">Ignoring diversity</a> - Events on a timeline. Inadequate model of the past.</li>
+	<li><a href="Jevons paradox.html">Jevons paradox</a> - How many times have we stumbled into this paradox since the steam engine?</li>
+	<li><a href="Knowledge isn't wisdom.html">Knowledge isn't wisdom</a> - How is historical insight embodied?</li>
+	<li><a href="Lack of humility.html">Lack of humility</a> - Your conscious soul, a barely visible flash in the void.</li>
+	<li><a href="Lack of purpose.html">Lack of purpose</a> - A link in a chain of time.</li>
+	<li><a href="Lack of the longterm.html">Lack of the longterm</a></li>
+	<li><a href="Meaning crisis.html">Meaning crisis</a></li>
+	<li><a href="Missing elders.html">Missing elders</a> - The link to the past is corroded, if not broken.</li>
+	<li><a href="Naive progress narrative.html">Naive progress narrative</a></li>
+	<li><a href="No respect for indigenous wisdom.html">No respect for indigenous wisdom</a> - You wouldn't listen to someone "stuck living in the past", you definitely wouldn't listen to someone still in dreamtime.</li>
+	<li><a href="No value in maintenance.html">No value in maintenance</a> - Some things are the way they are for reasons we've forgotten to recall.</li>
+	<li><a href="Only 'can we' never 'should we'.html">Only 'can we' never 'should we'</a></li>
+	<li><a href="Sense-making crisis.html">Sense-making crisis</a></li>
+	<li><a href="The desacration of all places.html">The desacration of all places</a></li>
+	<li><a href="Unbalanced longtermism.html">Unbalanced longtermism</a></li>
+	<li><a href="Unheeded warnings.html">Unheeded warnings</a> - History is filled with warnings directed straight at us, the people of modernity.</li>
+	<li><a href="Wisdom crisis.html">Wisdom crisis</a></li>
 </ul>
 <br>
 <br>
