--- a/content/Lack of humility.html
+++ b/content/Lack of humility.html
@@ -4,15 +4,34 @@
 <p>We humans have undoubtedly, in some ways, gotten far along certain paths of progress or thought-manifestations. However, we lose our humility when our feet leave the <a href="https://www.etymonline.com/word/humility">humus</a> of the Earth. A tree that reaches towards the heavens while forsaking its roots quickly dies. There is no honour in mere grandeur, we must keep our feet and roots in the ground of reality.</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
-	<li>  <strong><a href="Carelessness.html">Carelessness</a></strong></li>
-	<li>  <strong><a href="Unheeded warnings.html">Unheeded warnings</a></strong></li>
-	<li>  <strong><a href="Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a></strong></li>
-	<li>  <strong><a href="Lack of historical insight.html">Lack of historical insight</a></strong></li>
-	<li>  <strong><a href="Delusional domination of nature.html">Delusional domination of nature</a></strong></li>
-	<li>  <strong><a href="Avoiding uncertainty.html">Avoiding uncertainty</a></strong></li>
-	<li>  <strong><a href="Illusion of competence.html">Illusion of competence</a></strong></li>
-	<li>  <strong><a href="Illusion of understanding.html">Illusion of understanding</a></strong></li>
-	<li>  <strong><a href="Animal views.html">Animal views</a></strong></li>
+	<li><a href="Acceleration.html">Acceleration</a> - Overconfident in our ability to steer at such speed.</li>
+	<li><a href="Air travel.html">Air travel</a> - Falling angels on laxatives.</li>
+	<li><a href="Big tech.html">Big tech</a></li>
+	<li><a href="Centralisation.html">Centralisation</a> - I wouldn't trust myself with any power. Yet, I'd trust myself more than I trust many others. At least I am aware of just how unfit I am to handle great power.</li>
+	<li><a href="Colonialist narratives.html">Colonialist narratives</a></li>
+	<li><a href="Culture wars.html">Culture wars</a></li>
+	<li><a href="Dealing with death.html">Dealing with death</a> - Strongly doubt anyone who genuinely wants to live forever.</li>
+	<li><a href="Debt.html">Debt</a> - Taking on debt is being confident about one's future ability to pay it back.</li>
+	<li><a href="Deforestation.html">Deforestation</a></li>
+	<li><a href="Delusional domination of nature.html">Delusional domination of nature</a></li>
+	<li><a href="Ego.html">Ego</a></li>
+	<li><a href="Government.html">Government</a> - The humble do not seek power.</li>
+	<li><a href="Greed.html">Greed</a></li>
+	<li><a href="Identity.html">Identity</a></li>
+	<li><a href="Illusion of competence.html">Illusion of competence</a> - Competence is bounded. Incompetence is bottomless.</li>
+	<li><a href="Illusion of understanding.html">Illusion of understanding</a></li>
+	<li><a href="Maximum power principle.html">Maximum power principle</a> - Humility has no place here.</li>
+	<li><a href="Naive progress narrative.html">Naive progress narrative</a></li>
+	<li><a href="No respect for indigenous wisdom.html">No respect for indigenous wisdom</a> - If only we saw how little we know.</li>
+	<li><a href="Power concentration to the wrong people.html">Power concentration to the wrong people</a> - Seeking power, you've become unfit to wield it.</li>
+	<li><a href="Scientism.html">Scientism</a></li>
+	<li><a href="Selfishness.html">Selfishness</a></li>
+	<li><a href="Status.html">Status</a></li>
+	<li><a href="The Dark Triad.html">The Dark Triad</a> - Humility is, if nothing else, a sign of the absence of the dark triad.</li>
+	<li><a href="The desacration of all places.html">The desacration of all places</a></li>
+	<li><a href="Virtue signalling.html">Virtue signalling</a> - Fuck your hybrid.</li>
+	<li><a href="War.html">War</a> - I'm all for getting more women into leadership position, mostly to avoid the incessant cock measuring contests going on around the world.</li>
+	<li><a href="Wisdom crisis.html">Wisdom crisis</a> - Humility is one of the initial steps towards wisdom.</li>
 </ul>
 <br>
 <br>
